# invera-challenge

./: .env.template  .gitignore  Dockerfile  Procfile  README.md  conftest.py  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
core/: admin.py  filters.py  models.py  serializers.py  service.py  throttling.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_task_description_task_title.py
core/tests/: fixtures.py  test_create_task.py  test_task.py
invera_tasks/: asgi.py  urls.py  wsgi.py
invera_tasks/settings/: base.py  local.py  prod.py
user/: serializers.py  urls.py  views.py
user/tests/: fixtures.py
